# C-Permutation-Matrix-Encryption

./: CMakeLists.txt  Makefile  README.md  cpme.c  cpme.h  cpme_main.c  fontblanc.c  fontblanc.h  fontblanc_main.c  run_threads.sh  splash.txt  test_main.c  test_variable  util.c  util.h
Misc/: run_threads.sh  splash.txt  test_fixed
